# BshDataProvider

./: .gitignore  ADJUSTMENTS_GUIDE.md  BUGFIXES_SUMMARY.md  CONFIG_MANAGER_IMPLEMENTATION.md  CSSPX.parquet  DICT_MODE_FEATURE.md  DOCUMENTAZIONE.md  EIMI.parquet  EURUSD.parquet  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INITIALIZATION_ANALYSIS.md  INITIALIZATION_SUMMARY.md  IUSE.parquet  LOGGING_ANALYSIS.md  LOGGING_IN_EXTERNAL_PROJECTS.md  NEW_FEATURES_SUMMARY.md  README.md  UPDATABLE_COMPONENTS_SUMMARY.md  bsh_udf.py  build_lib.bat  calculate_clean_returns.py  calculate_intraday_returns.py  debug_adjustments.py  download_data.py  download_real_data.py  example.py  fx_analysis.xlsx  fx_analysis_simple.xlsx  fx_comprehensive_results.xlsx  fx_debug.xlsx  fx_forward_1m_prices.csv  fx_forward_prices.parquet  fx_rates.parquet  fx_spot_prices.csv  historical_adjustment_test.py  interest_rates.csv  profiler_oracle_bottleneck_20251217_215819.txt  pyproject.toml  readme.md  (+22 more)
.claude/: RETURN_CALCULATOR_ARCHITECTURE.md  settings.local.json
benchmarks/: benchmark_get_clean_returns.py
bsh_addin/: bsh_udf.py  bshaddin.xlam  utilsExcel.py
config/: bshdata_config.yaml  subscriptions.yaml
data/: dividends.parquet  etf_prices.parquet  fx_composition.parquet  fx_forward.parquet  fx_forward_prices.parquet  fx_prices.parquet  ter.parquet
examples/: dict_mode_usage.py  download_fairvalue_bsh.py  improved_initialization_example.py  logging_examples.py
real_data/: dividends.parquet  fx_composition.parquet  fx_forward_composition.parquet  fx_forward_points.parquet  fx_prices.parquet  prices.parquet  ters.parquet
src/: client.py
tests/: conftest.py  example.py  full_adjuster.py  pytest.ini  return_adjustments_full_pipeline.py  run_monitor_with_mock.py  (+13 more)
(+296 files in other folders)
