[project]
name = "bsh_data_provider"
version = "1.1"
description = "Data provider project developed by Sella Financial Markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "cvxpy>=1.5.3",
    "django>=5.1.5",
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "openpyxl>=3.1.2",
    "pytest-mock",
    "redis>=6.2.0",
    "ruamel-yaml>=0.18.6",
    "scipy>=1.16.0",
    "sfm-dbconnections>=1.0.72922",
    "sfm-pcf-db-library>=1.0.72038",
    "sfm-return-adjustment-lib>=1.0.72051",
    "sfm-timescaledb-queries>=1.0.72117",
    "tqdm>=4.64.0",
    "watchdog>=2.2.1",
    "xbbg>=0.7.7",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]


[dependency-groups]
dev = [
    "pyinstaller>=6.10.0",
]


[[tool.uv.index]]
type = "find-links"
url = "packages/"
