[project]
name = "sfm_data_provider"
version = "1.2"
description = "Data provider project developed by Sella Financial Markets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "matplotlib>=3.9.0",
    "pytest-mock",
    "ruamel-yaml>=0.18.6",
    "sfm-datalibrary>=1.0.76348",
    "stats",
    "tqdm>=4.64.0",
]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    "sys_platform == 'linux'",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
sfm_data_provider = ["core/enums/fields.yaml", "core/enums/markets.yaml", "core/holidays/holidays.yaml"]


